--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,9 +2,10 @@
 name: Deploy static content to Pages
 
 on:
-  pull_request:
-    branches:
-      - main
+  # Runs on pushes targeting the default branch
+  push:
+    branches: ["main"]
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
